--- a/helm-webapp/templates/deployment.yaml
+++ b/helm-webapp/templates/deployment.yaml
@@ -4,16 +4,18 @@ metadata:
   name: {{ .Values.appName }}
   labels:
     app: {{ .Values.appName }}
+    ingressNameOverride: '{{ include "ingressSuffixOverride" . }}'
+    clusterOverride: '{{ include "clusterDestinationOverride" . }}'
 spec:
   replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
-      app: {{ default .Values.INGRESS_HOSTNAME_SUFFIX (ternary (printf "%s.kyriba.io" .Values.PLATFORM_INSTANCE_ID) nil (has .Values.PLATFORM_INSTANCE_ID (list "us4-pre-a" "example"))) }}
+      app: {{ .Values.appName }}
       tier: frontend
   template:
     metadata:
       labels:
-        app: {{ default .Values.test.default (get (dict   "myhelmapp" "myapp-testing"   "myhelmapp2" "anotherValue" ) .Values.appName) }}
+        app: {{ .Values.appName }}
         tier: frontend
     spec: # Pod spec
       containers:
@@ -31,4 +33,3 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "100m"
-
